src/objects/Aftermarket_Cost_Center__c.object
<CustomObject>
    <description>Cost Centers used by the Service Sales side of the business</description>
    <fields>
        <fullName>Center_Location__c</fullName>
        <inlineHelpText>Center/Location for the Cost Center</inlineHelpText>
        <label>Center/Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>District__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Montreal</fullName>
                </value>
                <value>
                    <fullName>Quebec City</fullName>
                </value>
                <value>
                    <fullName>Ottawa</fullName>
                </value>
                <value>
                    <fullName>Toronto</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Danbury</fullName>
                </value>
                <value>
                    <fullName>Rochester</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Louisville</fullName>
                </value>
                <value>
                    <fullName>Indianapolis</fullName>
                </value>
                <value>
                    <fullName>Columbus</fullName>
                </value>
                <value>
                    <fullName>Detroit</fullName>
                </value>
                <value>
                    <fullName>Toledo</fullName>
                </value>
                <value>
                    <fullName>Lincoln</fullName>
                </value>
                <value>
                    <fullName>Des Moines</fullName>
                </value>
                <value>
                    <fullName>Central Illinois</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Sioux Falls</fullName>
                </value>
                <value>
                    <fullName>Fargo</fullName>
                </value>
                <value>
                    <fullName>Pittsburgh</fullName>
                </value>
                <value>
                    <fullName>Princeton, NJ</fullName>
                </value>
                <value>
                    <fullName>Richmond</fullName>
                </value>
                <value>
                    <fullName>Richmond (Marine)</fullName>
                </value>
                <value>
                    <fullName>Virginia Beach</fullName>
                </value>
                <value>
                    <fullName>Washington DC</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Savannah</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>New York City</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Center_Location__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2702</fullName>
                </value>
                <value>
                    <fullName>2703</fullName>
                </value>
                <value>
                    <fullName>2728</fullName>
                </value>
                <value>
                    <fullName>2743</fullName>
                </value>
                <value>
                    <fullName>2745</fullName>
                </value>
                <value>
                    <fullName>2746</fullName>
                </value>
                <value>
                    <fullName>2747</fullName>
                </value>
                <value>
                    <fullName>2748</fullName>
                </value>
                <value>
                    <fullName>2749</fullName>
                </value>
                <value>
                    <fullName>2793</fullName>
                </value>
                <value>
                    <fullName>2794</fullName>
                </value>
                <value>
                    <fullName>2802</fullName>
                </value>
                <value>
                    <fullName>2804</fullName>
                </value>
                <value>
                    <fullName>2805</fullName>
                </value>
                <value>
                    <fullName>2806</fullName>
                </value>
                <value>
                    <fullName>2807</fullName>
                </value>
                <value>
                    <fullName>2808</fullName>
                </value>
                <value>
                    <fullName>2810</fullName>
                </value>
                <value>
                    <fullName>2813</fullName>
                </value>
                <value>
                    <fullName>2816</fullName>
                </value>
                <value>
                    <fullName>2817</fullName>
                </value>
                <value>
                    <fullName>2818</fullName>
                </value>
                <value>
                    <fullName>2822</fullName>
                </value>
                <value>
                    <fullName>2823</fullName>
                </value>
                <value>
                    <fullName>2825</fullName>
                </value>
                <value>
                    <fullName>2826</fullName>
                </value>
                <value>
                    <fullName>2827</fullName>
                </value>
                <value>
                    <fullName>2829</fullName>
                </value>
                <value>
                    <fullName>2830</fullName>
                </value>
                <value>
                    <fullName>2834</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <inlineHelpText>District for the Cost Center</inlineHelpText>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Columbus</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Danbury</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Detroit</fullName>
                </value>
                <value>
                    <fullName>East Tennessee</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>Lincoln</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Montreal</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>New Orleans</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Ottawa</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Pittsburgh</fullName>
                </value>
                <value>
                    <fullName>Princeton</fullName>
                </value>
                <value>
                    <fullName>Raleigh</fullName>
                </value>
                <value>
                    <fullName>Richmond</fullName>
                </value>
                <value>
                    <fullName>Rochester</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <referenceTo>License__c</referenceTo>
        <relationshipLabel>Aftermarket Cost Centers</relationshipLabel>
        <relationshipName>Aftermarket_Cost_Centers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Aftermarket Cost Center</label>
    <nameField>
        <displayFormat>ACC-{0000}</displayFormat>
        <label>Aftermarket Cost Center</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aftermarket Cost Centers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>